# raic-2020

./: CHANGELOG-ru.md  CHANGELOG.md  README.md  doc-en.md  doc-ru.md
clients/CSharp/: DebugInterface.cs  MyStrategy.cs  Runner.cs  aicup2020.csproj  run.sh
clients/Cpp/: CMakeLists.txt  DebugInterface.cpp  DebugInterface.hpp  Dockerfile  MyStrategy.cpp  MyStrategy.hpp  TcpStream.cpp  TcpStream.hpp  compile.sh  main.cpp
clients/Cpp/model/: Action.cpp  Action.hpp  AttackAction.cpp  AttackAction.hpp  AttackProperties.cpp  AttackProperties.hpp  AutoAttack.cpp  AutoAttack.hpp  BuildAction.cpp  BuildAction.hpp  BuildProperties.cpp  BuildProperties.hpp  Camera.cpp  Camera.hpp  ClientMessage.cpp  ClientMessage.hpp  Color.cpp  Color.hpp  ColoredVertex.cpp  ColoredVertex.hpp  DebugCommand.cpp  DebugCommand.hpp  DebugData.cpp  DebugData.hpp  DebugState.cpp  DebugState.hpp  Entity.cpp  Entity.hpp  EntityAction.cpp  EntityAction.hpp  EntityProperties.cpp  EntityProperties.hpp  EntityType.hpp  Model.hpp  MoveAction.cpp  MoveAction.hpp  Player.cpp  Player.hpp  PlayerView.cpp  PlayerView.hpp  (+11 more)
clients/Dlang/: Dockerfile  compile.sh  dub.json  run.sh
clients/FSharp/: DebugInterface.fs  Dockerfile  MyStrategy.fs  Runner.fs  aicup2020.fsproj
clients/Go/: Dockerfile  compile.sh  debug_interface.go  go.mod  main.go  my_strategy.go
clients/Java/: Dockerfile  compile.sh  pom.xml  run.sh
clients/Java-GraalVM-native/: compile.sh  pom.xml
clients/JavaScript/: Dockerfile  debug-interface.js  index.js  my-strategy.js  stream-wrapper.js
clients/Kotlin-GraalVM-native/: Dockerfile  run.sh  (+2 more)
(+362 files in other folders)
